--- a/about.html
+++ b/about.html
@@ -49,7 +49,6 @@
 		<div class="container">
 			<!-- Page Heading/Breadcrumbs -->
 			<h1 class="mt-4 mb-3">About
-				<small>Subheading</small>
 			</h1>
 		</div>
 	</div>
@@ -67,13 +66,20 @@
 		<div class="about-main">
 			<div class="row">
 				<div class="col-lg-6">
-					<img class="img-fluid rounded mb-4" src="images/about-img.jpg" alt="" />
+					<img class="img-fluid rounded mb-4" src="images/about-img.jpeg" alt="" />
 				</div>
 				<div class="col-lg-6">
-					<h2>About Modern Business</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
+					<h2>About Oude Mollen Food Garden</h2>
+					<p>It began as a humble, dilapidated piece of land that captured the keen eye of
+the founder who was a gentleman that teamed up with the surrounding
+community to turn the space into a garden.</p>
+<p>It also functioned as an environment for the founder to run a program for
+young impoverished teenagers from tough backgrounds, who would come and
+work in the garden as a means of keeping them off the streets and developing
+them through mentorship.</p>
+<p>The garden has been a means of recreation and comfort for mentally ill
+patients admitted in Valkenberg Hospital. At Oude Mollen Food Garden we run a kids programme to teach them the basic tools they need to become
+impactful individuals</p>
 				</div>
 			</div>
 			<!-- /.row -->
@@ -85,10 +91,10 @@
 			<div class="row">
 				<div class="col-lg-4 mb-4">
 				  <div class="card h-100 text-center">
-					<img class="card-img-top" src="images/team_01.jpg" alt="" />
+					<img class="card-img-top" src="images/team_01.jpeg" alt="" />
 					<div class="card-body">
-						<h4 class="card-title">Team Member</h4>
-						<h6 class="card-subtitle mb-2 text-muted">Position</h6>
+						<h4 class="card-title">Jean Sebastien</h4>
+						<h6 class="card-subtitle mb-2 text-muted">Social Media Representative</h6>
 						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
 					</div>
 					<div class="card-footer">
@@ -102,10 +108,10 @@
 				</div>
 				<div class="col-lg-4 mb-4">
 				  <div class="card h-100 text-center">
-					<img class="card-img-top" src="images/team_02.jpg" alt="" />
+					<img class="card-img-top" src="images/team_02.jpeg" alt="" />
 					<div class="card-body">
-						<h4 class="card-title">Team Member</h4>
-						<h6 class="card-subtitle mb-2 text-muted">Position</h6>
+						<h4 class="card-title">Loic</h4>
+						<h6 class="card-subtitle mb-2 text-muted">Strategic Marketing</h6>
 						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
 					</div>
 					<div class="card-footer">
@@ -119,10 +125,10 @@
 				</div>
 				<div class="col-lg-4 mb-4">
 				  <div class="card h-100 text-center">
-					<img class="card-img-top" src="images/team_03.jpg" alt="" />
+					<img class="card-img-top" src="images/team_03.jpeg" alt="" />
 					<div class="card-body">
-						<h4 class="card-title">Team Member</h4>
-						<h6 class="card-subtitle mb-2 text-muted">Position</h6>
+						<h4 class="card-title">Jetro</h4>
+						<h6 class="card-subtitle mb-2 text-muted">Art Sector Project Manager</h6>
 						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
 					</div>
 					<div class="card-footer">
@@ -137,9 +143,9 @@
 			</div>
 			<!-- /.row -->
 		</div>
-		<!-- Our Customers -->
+		<!-- Our Partners -->
 		<div class="customers-box"> 
-			<h2>Our Customers</h2>
+			<h2>Our Partners</h2>
 			<div class="row">
 				<div class="col-lg-2 col-sm-4 mb-4">
 				  <img class="img-fluid" src="images/logo_01.png" alt="" />
@@ -151,14 +157,12 @@
 				  <img class="img-fluid" src="images/logo_03.png" alt="" />
 				</div>
 				<div class="col-lg-2 col-sm-4 mb-4">
-				  <img class="img-fluid" src="images/logo_04.png" alt="" />
+				  <img class="img-fluid" src="images/logo_04.jpeg" alt="" />
 				</div>
 				<div class="col-lg-2 col-sm-4 mb-4">
 				  <img class="img-fluid" src="images/logo_05.png" alt="" />
 				</div>
-				<div class="col-lg-2 col-sm-4 mb-4">
-				  <img class="img-fluid" src="images/logo_06.png" alt="" />
-				</div>
+				
 			</div>
 			<!-- /.row -->
 		</div>
@@ -212,7 +216,7 @@
 					<ul class="footer_ul_amrc">
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-01.jpg" alt="" />
+								<img class="img-fluid" src="images/post-img-01.jpeg" alt="" />
 							</div>
 							<div class="media-body">
 								<p>How to find best dog food?</p>
@@ -221,7 +225,7 @@
 						</li>
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-02.jpg" alt="" />
+								<img class="img-fluid" src="images/post-img-02.jpeg" alt="" />
 							</div>
 							<div class="media-body">
 								<p>How to find best dog food?</p>
@@ -230,7 +234,7 @@
 						</li>
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-03.jpg" alt="" />
+								<img class="img-fluid" src="images/post-img-03.jpeg" alt="" />
 							</div>
 							<div class="media-body">
 								<p>How to find best dog food?</p>
