--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
 		<div class="container">
 			<!-- Page Heading/Breadcrumbs -->
 			<h1 class="mt-4 mb-3">Contact
-				<small>Subheading</small>
+				
 			</h1>
 		</div>
 	</div>
@@ -77,8 +77,8 @@
         <div class="col-lg-4 mb-4 contact-right">
           <h3>Contact Details</h3>
           <p>
-            3481 Melrose Place
-            <br>Beverly Hills, CA 90210
+            Alexandra Rd
+            <br>Pinelands, Cape Town 7405
             <br>
           </p>
           <p>
