--- a/index.html
+++ b/index.html
@@ -91,17 +91,29 @@
         <div class="about-main">
             <div class="row">
                <div class="col-lg-6">
-                  <h2>Welcome to N & LW Lawn Care</h2>
+                  <h2>Oude Mollen Food Garden</h2>
+                  Oude Molen Food Garden is an initiative that was started by Kelly 8 years ago. 
+                  She saw potential and an opportunity in it. She believed 
+                  that as individuals, it was possible for us to grow plants naturally and to become agriculturally
+                   self-sufficient.
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                  <h5>Our smart approach</h5>
+                  <h5>Our goals</h5>
                   <ul>
-                     <li>Sed at tellus eu quam posuere mattis.</li>
-                     <li>Phasellus quis erat et enim laoreet posuere ac porttitor ipsum.</li>
-                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                     <li>Duis porttitor odio pellentesque mollis vulputate.</li>
-                     <li>Quisque ac eros non ex hendrerit vehicula.</li>
+                     <li>To continue to add value to the surrounding community through horticulture and
+the preservation of heirloom seeds which are pest resistant and not genetically
+modified. These seeds also propagate by themselves.</li>
+                     <li>To create a multifunctional space for Courses, Art Projects, Market Spaces and
+much more.</li>
+<li>Provide a source of food security that is available to the public and a space to
+offer programs for other organisations to facilitate the growth and development of
+young people.</li>
+<li>To educate the public on the importance of food security and community involvement</li>
+<li>To be able to build the initiative up to a point where the necessary foundation has
+been laid from an economic, agricultural and sustainable perspective. Achieving
+this ensures that the project can one day be handed down to others just as
+passionate about the project but with more time and resource to guarantee future
+growth.</li>
                   </ul>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
                </div>
                <div class="col-lg-6">
                   <img class="img-fluid rounded" src="images/about-img.jpg" alt="" />
@@ -226,7 +238,7 @@
 					<h5 class="headin5_amrc col_white_amrc pt2">Find us</h5>
 					<!--headin5_amrc-->
 					<p class="mb10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-					<p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
+					<p><i class="fa fa-location-arrow"></i>Alexandra Rd, Pinelands</p>
 					<p><i class="fa fa-phone"></i> +91-9999878398 </p>
 					<p><i class="fa fa fa-envelope"></i> info@example.com </p>
                </div>
