New card on team that will take 4 col

--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@ impactful individuals</p>
 		<div class="team-members-box">  
 			<h2>Our Team</h2>
 			<div class="row">
-				<div class="col-lg-4 mb-4">
+				<div class="col-sm-3 mb-4">
 				  <div class="card h-100 text-center">
 					<img class="card-img-top" src="images/team_01.jpeg" alt="" />
 					<div class="card-body">
@@ -106,7 +106,7 @@ impactful individuals</p>
 					</div>
 				  </div>
 				</div>
-				<div class="col-lg-4 mb-4">
+				<div class="col-sm-3 mb-4">
 				  <div class="card h-100 text-center">
 					<img class="card-img-top" src="images/team_02.jpeg" alt="" />
 					<div class="card-body">
@@ -123,7 +123,7 @@ impactful individuals</p>
 					</div>
 				  </div>
 				</div>
-				<div class="col-lg-4 mb-4">
+				<div class="col-sm-3 mb-4">
 				  <div class="card h-100 text-center">
 					<img class="card-img-top" src="images/team_03.jpeg" alt="" />
 					<div class="card-body">
@@ -140,7 +140,26 @@ impactful individuals</p>
 					</div>
 				  </div>
 				</div>
+				<div class="col-sm-3 mb-4">
+					<div class="card h-100 text-center">
+					  <img class="card-img-top" src="images/team_03.jpeg" alt="" />
+					  <div class="card-body">
+						  <h4 class="card-title">Jetro</h4>
+						  <h6 class="card-subtitle mb-2 text-muted">Art Sector Project Manager</h6>
+						  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+					  </div>
+					  <div class="card-footer">
+						  <ul>
+							  <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+							  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+							  <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+						  </ul>
+					  </div>
+					</div>
+				  </div>
+			  </div>
 			</div>
+			
 			<!-- /.row -->
 		</div>
 		<!-- Our Partners -->
