--- a/about.html
+++ b/about.html
@@ -41,6 +41,23 @@
 					<a class="nav-link" href="faq.html">FaQ</a>
 				 </li>
                </ul>
+			   <ul class="navbar-nav ml-auto">
+				<li class="nav-item">
+				   <a class="nav-link active" href="index.html">Home</a>
+				</li>
+				<li class="nav-item">
+				   <a class="nav-link" href="about.html">About</a>
+				</li>
+				<li class="nav-item">
+				   <a class="nav-link" href="blog-post.html">Blog</a>
+				</li>
+				<li class="nav-item">
+				   <a class="nav-link" href="contact.html">Contact</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="faq.html">FaQ</a>
+			   </li>
+			 </ul>
             </div>
         </div>
     </nav>
