--- a/faq.html
+++ b/faq.html
@@ -24,23 +24,23 @@
 				<span class="fas fa-bars"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-               <ul class="navbar-nav ml-auto">
-                  <li class="nav-item">
-                     <a class="nav-link active" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="about.html">About</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="blog-post.html">Blog</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="contact.html">Contact</a>
-                  </li>
-				  <li class="nav-item">
-					<a class="nav-link" href="faq.html">FaQ</a>
-				 </li>
-               </ul>
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+					   <a class="nav-link" href="index.html">Home</a>
+					</li>
+					<li class="nav-item">
+					   <a class="nav-link" href="about.html">About</a>
+					</li>
+					<li class="nav-item">
+					   <a class="nav-link" href="blog-post.html">Blog</a>
+					</li>
+					<li class="nav-item">
+					   <a class="nav-link" href="contact.html">Contact</a>
+					</li>
+				<li class="nav-item">
+				 <a class="nav-link active" href="faq.html">FaQ</a>
+			   </li>
+				 </ul>
             </div>
         </div>
     </nav>
@@ -50,7 +50,6 @@
 		<div class="container">
 			<!-- Page Heading/Breadcrumbs -->
 			<h1 class="mt-4 mb-3">FAQ
-				<small>Subheading</small>
 			</h1>
 		</div>
 	</div>
@@ -71,7 +70,7 @@
 				<div class="card accordion-single">
 				  <div class="card-header" role="tab" id="headingOne">
 					<h5 class="mb-0">
-					  <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Phasellus ultrices tellus nec pellentesque ornare.</a>
+					  <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">What services do the SDP provide</a>
 					</h5>
 				  </div>
 
@@ -118,8 +117,11 @@
                <div class="col-lg-3 col-md-6 col-sm-6 col">
 					<h5 class="headin5_amrc col_white_amrc pt2">Find us</h5>
 					<!--headin5_amrc-->
-					<p class="mb10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-					<p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
+					<p class="mb10">
+						Don't hesitate to contact us if you have any question or inquiries. We would be happy to 
+						answer your question and set up a meeting with you.
+					</p>
+					<p><i class="fa fa-location-arrow"></i>Alexandra Rd, Pinelands</p>
 					<p><i class="fa fa-phone"></i> +91-9999878398 </p>
 					<p><i class="fa fa fa-envelope"></i> info@example.com </p>
                </div>
@@ -129,15 +131,15 @@
 					<ul class="footer_ul2_amrc">
 						<li>
 							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
+							<p>Find us on our Twitter page <a href="#">https://www.lipsum.com/</a></p>
 						</li>
 						<li>
-							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
+							<a href="#"><i class="fab fa-facebook-f fleft padding-right"></i> </a>
+							<p>Find us on our Facebook page <a href="#">https://www.lipsum.com/</a></p>
 						</li>
 						<li>
-							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
+							<a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a>
+							<p>Find us on our Instagram page <a href="#">https://www.lipsum.com/</a></p>
 						</li>
 					</ul>
 					<!--footer_ul2_amrc ends here-->
@@ -146,11 +148,8 @@
 					<h5 class="headin5_amrc col_white_amrc pt2">Quick links</h5>
 					<!--headin5_amrc-->
 					<ul class="footer_ul_amrc">
-						<li><a href="#">Default Version</a></li>
-						<li><a href="#">Boxed Version</a></li>
 						<li><a href="#">Our Team </a></li>
-						<li><a href="#">About Us</a></li>
-						<li><a href="#">Our Services</a></li>
+						<li><a href="#">About Us</a></li>						
 						<li><a href="#">Get In Touch</a></li>
 					</ul>
 					<!--footer_ul_amrc ends here-->
@@ -161,7 +160,7 @@
 					<ul class="footer_ul_amrc">
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-01.jpg" alt="" />
+								<img class="img-fluid" src="images/post-img-01.jpeg" alt="" />
 							</div>
 							<div class="media-body">
 								<p>How to find best dog food?</p>
@@ -170,7 +169,7 @@
 						</li>
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-02.jpg" alt="" />
+								<img class="img-fluid" src="images/post-img-02.jpeg" alt="" />
 							</div>
 							<div class="media-body">
 								<p>How to find best dog food?</p>
@@ -179,7 +178,7 @@
 						</li>
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-03.jpg" alt="" />
+								<img class="img-fluid" src="images/post-img-03.jpeg" alt="" />
 							</div>
 							<div class="media-body">
 								<p>How to find best dog food?</p>
