--- a/blog-post.html
+++ b/blog-post.html
@@ -24,23 +24,23 @@
       <span class="fas fa-bars"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
-             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                   <a class="nav-link active" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                   <a class="nav-link" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                   <a class="nav-link" href="services.html">Services</a>
-                </li>
-                <li class="nav-item">
-                   <a class="nav-link" href="blog-post.html">Blog</a>
-                </li>
-                <li class="nav-item">
-                   <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-             </ul>
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                 <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                 <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                 <a class="nav-link active" href="blog-post.html">Blog</a>
+              </li>
+              <li class="nav-item">
+                 <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+          <li class="nav-item">
+           <a class="nav-link" href="faq.html">FaQ</a>
+         </li>
+           </ul>
           </div>
       </div>
   </nav>
@@ -48,8 +48,7 @@
 	<div class="full-title">
 		<div class="container">
 			<!-- Page Heading/Breadcrumbs -->
-			<h1 class="mt-4 mb-3">Post Title
-				<small>Subheading</small>
+			<h1 class="mt-4 mb-3">Blog
 			</h1>
 		</div>
 	</div>
@@ -61,7 +60,7 @@
 				<li class="breadcrumb-item">
 					<a href="index.html">Home</a>
 				</li>
-				<li class="breadcrumb-item active">Blog Home 2</li>
+				<li class="breadcrumb-item active">Blog</li>
 			</ol>
 		</div>
 
@@ -70,7 +69,7 @@
 			<div class="col-lg-8">
 
 				<!-- Preview Image -->
-				<img class="img-fluid rounded" src="images/blog-item-01.jpg" alt="" />
+				<img class="img-fluid rounded" src="images/First_Pic.jpeg" height="400" witdh="300">
 				<hr>
 					<!-- Date/Time -->
 					<p>Posted on January 1, 2018 at 18:00 PM</p>
@@ -217,101 +216,100 @@
 
     <!--footer starts from here-->
     <footer class="footer">
-        <div class="container bottom_border">
-            <div class="row">
-               <div class="col-lg-3 col-md-6 col-sm-6 col">
-					<h5 class="headin5_amrc col_white_amrc pt2">Find us</h5>
-					<!--headin5_amrc-->
-					<p class="mb10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-					<p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
-					<p><i class="fa fa-phone"></i> +91-9999878398 </p>
-					<p><i class="fa fa fa-envelope"></i> info@example.com </p>
-               </div>
-               <div class="col-lg-3 col-md-6 col-sm-6 col">
-					<h5 class="headin5_amrc col_white_amrc pt2">Follow us</h5>
-					<!--headin5_amrc ends here-->
-					<ul class="footer_ul2_amrc">
-						<li>
-							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
-						</li>
-						<li>
-							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
-						</li>
-						<li>
-							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
-						</li>
-					</ul>
-					<!--footer_ul2_amrc ends here-->
-				</div>
-				<div class="col-lg-3 col-md-6 col-sm-6">
-					<h5 class="headin5_amrc col_white_amrc pt2">Quick links</h5>
-					<!--headin5_amrc-->
-					<ul class="footer_ul_amrc">
-						<li><a href="#">Default Version</a></li>
-						<li><a href="#">Boxed Version</a></li>
-						<li><a href="#">Our Team </a></li>
-						<li><a href="#">About Us</a></li>
-						<li><a href="#">Our Services</a></li>
-						<li><a href="#">Get In Touch</a></li>
-					</ul>
-					<!--footer_ul_amrc ends here-->
-				</div>
-				<div class="col-lg-3 col-md-6 col-sm-6 ">
-					<h5 class="headin5_amrc col_white_amrc pt2">Recent posts</h5>
-					<!--headin5_amrc-->
-					<ul class="footer_ul_amrc">
-						<li class="media">
-							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-01.jpg" alt="" />
-							</div>
-							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>22 Sep 2018</span>
-							</div>
-						</li>
-						<li class="media">
-							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-02.jpg" alt="" />
-							</div>
-							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>34 Sep 2018</span>
-							</div>
-						</li>
-						<li class="media">
-							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-03.jpg" alt="" />
-							</div>
-							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>30 Sep 2018</span>
-							</div>
-						</li>
-					</ul>
-					<!--footer_ul_amrc ends here-->
-				</div>
-			</div>
-		</div>
-        <div class="container">
-            <div class="footer-logo">
-				<a href="#"><img src="images/footer-logo.png" alt="" /></a>
-			</div>
-            <!--foote_bottom_ul_amrc ends here-->
-            <p class="copyright text-center">All Rights Reserved. &copy; 2022 <a href="#">Sustainability-Development-Project</a> Design By : 
-              <a href="https://www.linkedin.com/in/loic-mavah-tseket-271543157/">Loic Mavah-Tseket</a>
-                  </p>
-            <ul class="social_footer_ul">
-				<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-				<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-				<li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-				<li><a href="#"><i class="fab fa-instagram"></i></a></li>
-            </ul>
-            <!--social_footer_ul ends here-->
-        </div>
-    </footer>
+      <div class="container bottom_border">
+          <div class="row">
+             <div class="col-lg-3 col-md-6 col-sm-6 col">
+        <h5 class="headin5_amrc col_white_amrc pt2">Find us</h5>
+        <!--headin5_amrc-->
+        <p class="mb10">Don't hesitate to contact us if you have any question or inquiries. We would be happy to 
+          answer your question and set up a meeting with you.
+        </p>
+        <p><i class="fa fa-location-arrow"></i>Alexandra Rd, Pinelands</p>
+        <p><i class="fa fa-phone"></i> +91-9999878398 </p>
+        <p><i class="fa fa fa-envelope"></i> info@example.com </p>
+             </div>
+             <div class="col-lg-3 col-md-6 col-sm-6 col">
+        <h5 class="headin5_amrc col_white_amrc pt2">Follow us</h5>
+        <!--headin5_amrc ends here-->
+        <ul class="footer_ul2_amrc">
+          <li>
+            <a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
+            <p>Find us on our Twitter page <a href="#">https://www.lipsum.com/</a></p>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-facebook-f fleft padding-right"></i> </a>
+            <p>Find us on our Facebook page <a href="#">https://www.lipsum.com/</a></p>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a>
+            <p>Find us on our Instagram page <a href="#">https://www.lipsum.com/</a></p>
+          </li>
+        </ul>
+        <!--footer_ul2_amrc ends here-->
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <h5 class="headin5_amrc col_white_amrc pt2">Quick links</h5>
+        <!--headin5_amrc-->
+        <ul class="footer_ul_amrc">
+          <li><a href="#">Our Team </a></li>
+          <li><a href="#">About Us</a></li>						
+          <li><a href="#">Get In Touch</a></li>
+        </ul>
+        <!--footer_ul_amrc ends here-->
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-6 ">
+        <h5 class="headin5_amrc col_white_amrc pt2">Recent posts</h5>
+        <!--headin5_amrc-->
+        <ul class="footer_ul_amrc">
+          <li class="media">
+            <div class="media-left">
+              <img class="img-fluid" src="images/post-img-01.jpeg" alt="" />
+            </div>
+            <div class="media-body">
+              <p>How to find best dog food?</p>
+              <span>22 Sep 2018</span>
+            </div>
+          </li>
+          <li class="media">
+            <div class="media-left">
+              <img class="img-fluid" src="images/post-img-02.jpeg" alt="" />
+            </div>
+            <div class="media-body">
+              <p>How to find best dog food?</p>
+              <span>34 Sep 2018</span>
+            </div>
+          </li>
+          <li class="media">
+            <div class="media-left">
+              <img class="img-fluid" src="images/post-img-03.jpeg" alt="" />
+            </div>
+            <div class="media-body">
+              <p>How to find best dog food?</p>
+              <span>30 Sep 2018</span>
+            </div>
+          </li>
+        </ul>
+        <!--footer_ul_amrc ends here-->
+      </div>
+    </div>
+  </div>
+      <div class="container">
+          <div class="footer-logo">
+      <a href="#"><img src="images/footer-logo.png" alt="" /></a>
+    </div>
+          <!--foote_bottom_ul_amrc ends here-->
+          <p class="copyright text-center">All Rights Reserved. &copy; 2022 <a href="#">Sustainability-Development-Project</a> Design By : 
+      <a href="https://www.linkedin.com/in/loic-mavah-tseket-271543157/">Loic Mavah-Tseket</a>
+          </p>
+          <ul class="social_footer_ul">
+      <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+      <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+      <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+      <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+          </ul>
+          <!--social_footer_ul ends here-->
+      </div>
+  </footer>
 
 <!-- Bootstrap core JavaScript -->
 <script src="vendor/jquery/jquery.min.js"></script>
