--- a/about.html
+++ b/about.html
@@ -24,40 +24,23 @@
 				<span class="fas fa-bars"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-               <ul class="navbar-nav ml-auto">
-                  <li class="nav-item">
-                     <a class="nav-link active" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="about.html">About</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="blog-post.html">Blog</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="contact.html">Contact</a>
-                  </li>
-				  <li class="nav-item">
-					<a class="nav-link" href="faq.html">FaQ</a>
-				 </li>
-               </ul>
-			   <ul class="navbar-nav ml-auto">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+					   <a class="nav-link" href="index.html">Home</a>
+					</li>
+					<li class="nav-item">
+					   <a class="nav-link active" href="about.html">About</a>
+					</li>
+					<li class="nav-item">
+					   <a class="nav-link" href="blog-post.html">Blog</a>
+					</li>
+					<li class="nav-item">
+					   <a class="nav-link" href="contact.html">Contact</a>
+					</li>
 				<li class="nav-item">
-				   <a class="nav-link active" href="index.html">Home</a>
-				</li>
-				<li class="nav-item">
-				   <a class="nav-link" href="about.html">About</a>
-				</li>
-				<li class="nav-item">
-				   <a class="nav-link" href="blog-post.html">Blog</a>
-				</li>
-				<li class="nav-item">
-				   <a class="nav-link" href="contact.html">Contact</a>
-				</li>
-				<li class="nav-item">
-				  <a class="nav-link" href="faq.html">FaQ</a>
+				 <a class="nav-link" href="faq.html">FaQ</a>
 			   </li>
-			 </ul>
+				 </ul>
             </div>
         </div>
     </nav>
@@ -86,7 +69,17 @@
 					<img class="img-fluid rounded mb-4" src="images/about-img.jpeg" alt="" />
 				</div>
 				<div class="col-lg-6">
-					<h2>About Oude Mollen Food Garden</h2>
+					<h2>About The Sustainability Diversity Project</h2>
+					<p>The Sustainability Diversity Project is a charity started by Educor.
+						 Our aim is to bring awareness to environmental issues and teach our communities ways that we can fight against them.
+						  As a non-profit organization, our main goal is not to make revenues but to bring value through our activities.</p>
+						  <p>The organization is headed by Shaheeda and our Head of Department, Mr. Gregory September. 
+						  Below them are the project managers that were chosen by them, and below those project managers are the members of each of team.
+						   When working, our emphasis is always on finding ways to empower our communities and surrounding environment.</p>
+						    <p>Despite its nature as a professional project, we still had the opportunity to spend an enjoyable time working 
+							on it and interacting with members of the communities we were in.
+							</p>
+							<!--
 					<p>It began as a humble, dilapidated piece of land that captured the keen eye of
 the founder who was a gentleman that teamed up with the surrounding
 community to turn the space into a garden.</p>
@@ -97,6 +90,7 @@ them through mentorship.</p>
 <p>The garden has been a means of recreation and comfort for mentally ill
 patients admitted in Valkenberg Hospital. At Oude Mollen Food Garden we run a kids programme to teach them the basic tools they need to become
 impactful individuals</p>
+-->
 				</div>
 			</div>
 			<!-- /.row -->
@@ -112,11 +106,11 @@ impactful individuals</p>
 					<div class="card-body">
 						<h4 class="card-title">Jean Sebastien</h4>
 						<h6 class="card-subtitle mb-2 text-muted">Social Media Representative</h6>
-						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+						<p class="card-text">As a member of the social media team, he was in charge of the garden's social media pages.</p>
 					</div>
 					<div class="card-footer">
 						<ul>
-							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="https://www.facebook.com/profile.php?id=100008664192029"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
 							<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
 						</ul>
@@ -129,11 +123,11 @@ impactful individuals</p>
 					<div class="card-body">
 						<h4 class="card-title">Loic</h4>
 						<h6 class="card-subtitle mb-2 text-muted">Strategic Marketing</h6>
-						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
-					</div>
+						<p class="card-text">He was specifically tasked with developing a social marketing strategy that would allow Oude Molen Food Garden's online presence to grow.
+						</div>
 					<div class="card-footer">
 						<ul>
-							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="https://www.facebook.com/profile.php?id=100064692152005"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
 							<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
 						</ul>
@@ -146,11 +140,11 @@ impactful individuals</p>
 					<div class="card-body">
 						<h4 class="card-title">Jetro</h4>
 						<h6 class="card-subtitle mb-2 text-muted">Art Sector Project Manager</h6>
-						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
-					</div>
+						<p class="card-text">He spearheaded the art department, which created all of the decorations at Oude Molen Food Garden. His contributions brought the garden to life.
+						</div>
 					<div class="card-footer">
 						<ul>
-							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="https://www.facebook.com/jetrodacosta"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
 							<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
 						</ul>
@@ -161,13 +155,13 @@ impactful individuals</p>
 					<div class="card h-100 text-center">
 					  <img class="card-img-top" src="images/team_03.jpeg" alt="" />
 					  <div class="card-body">
-						  <h4 class="card-title">Jetro</h4>
+						  <h4 class="card-title">Jordan</h4>
 						  <h6 class="card-subtitle mb-2 text-muted">Art Sector Project Manager</h6>
 						  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
 					  </div>
 					  <div class="card-footer">
 						  <ul>
-							  <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+							  <li><a href="https://www.facebook.com/JayNtaku19"><i class="fab fa-facebook-f"></i></a></li>
 							  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
 							  <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
 						  </ul>
@@ -212,8 +206,10 @@ impactful individuals</p>
                <div class="col-lg-3 col-md-6 col-sm-6 col">
 					<h5 class="headin5_amrc col_white_amrc pt2">Find us</h5>
 					<!--headin5_amrc-->
-					<p class="mb10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-					<p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
+					<p class="mb10">Don't hesitate to contact us if you have any question or inquiries. We would be happy to 
+						answer your question and set up a meeting with you.
+					</p>
+					<p><i class="fa fa-location-arrow"></i>Alexandra Rd, Pinelands</p>
 					<p><i class="fa fa-phone"></i> +91-9999878398 </p>
 					<p><i class="fa fa fa-envelope"></i> info@example.com </p>
                </div>
@@ -223,15 +219,15 @@ impactful individuals</p>
 					<ul class="footer_ul2_amrc">
 						<li>
 							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
+							<p>Find us on our Twitter page <a href="#">https://www.lipsum.com/</a></p>
 						</li>
 						<li>
 							<a href="#"><i class="fab fa-facebook-f fleft padding-right"></i> </a>
-							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
+							<p>Find us on our Facebook page <a href="#">https://www.lipsum.com/</a></p>
 						</li>
 						<li>
 							<a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a>
-							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
+							<p>Find us on our Instagram page <a href="#">https://www.lipsum.com/</a></p>
 						</li>
 					</ul>
 					<!--footer_ul2_amrc ends here-->
