--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
   </nav>
 	
 	<!-- full Title -->
-	<div class="full-title" style="background-image: url('images/all-title-bg.jpeg')">
+	<div class="full-title" style="background-image: url('images/blog-img-01.jpeg')">
 		<div class="container" >
 			<!-- Page Heading/Breadcrumbs -->
 			<h1 class="mt-4 mb-3">Contact
@@ -159,16 +159,16 @@
         <ul class="footer_ul2_amrc">
           <li>
             <a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-            <p>Find us on our Twitter page <a href="#">https://www.lipsum.com/</a></p>
-          </li>
-          <li>
-            <a href="#"><i class="fab fa-facebook-f fleft padding-right"></i> </a>
-            <p>Find us on our Facebook page <a href="#">https://www.lipsum.com/</a></p>
-          </li>
-          <li>
+            <p class="xlower">Find us on our Twitter page</p>
+         </li>
+         <li>
+            <a href="#"><i class="fab fa-facebook-f fleft padding-right xmargin"></i> </a>
+            <p class="xlower">Find us on our Facebook page</p>
+         </li>
+         <li>
             <a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a>
-            <p>Find us on our Instagram page <a href="#">https://www.lipsum.com/</a></p>
-          </li>
+            <p class="xlower">Find us on our Instagram page</p>
+         </li>
         </ul>
         <!--footer_ul2_amrc ends here-->
       </div>
