--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@ impactful individuals</p>
 				  </div>
 				  <div class="col-sm-3 mb-4 card1">
 					<div class="card h-100 text-center">
-					  <img class="card-img-top" src="images/IMG_7409.jpeg" alt="" />
+					  <img class="card-img-top" src="images/team_04.jpg" alt="" />
 					  <div class="card-body">
 						  <h4 class="card-title">Jordan</h4>
 						  <h6 class="card-subtitle mb-2 text-muted">Art Sector Project Manager</h6>
